Добавлен пример с перечислением

--- a/DresserUI/DresserUI/DresserUI.csproj
+++ b/DresserUI/DresserUI/DresserUI.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Drawing.Designer.cs">
       <DependentUpon>Drawing.cs</DependentUpon>
     </Compile>
+    <Compile Include="DressCloserType.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
